@@ -1,5 +1,6 @@
 * bug fix
   * Improve Rails 3.1 compatibility
+  * Provide a more robust behavior to serializers and add :force_except option
 
 == 1.4.1
 
